[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-agent"
version = "0.1.0"
description = "An autonomous AI coding agent with web, CLI, editor, and extension surfaces across NVIDIA NIM, DashScope, and local Ollama"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "tiktoken>=0.5.0",
    "g4f>=0.3.0",
]

[project.scripts]
claw = "claw_agent.cli:main"

[tool.setuptools.packages.find]
include = ["claw_agent*"]
